[gd_scene load_steps=11 format=2]

[ext_resource path="res://Enemy.gd" type="Script" id=1]
[ext_resource path="res://enemy-Sheet.png" type="Texture" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 7, 7 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 44, 44 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 20, 20 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 2 )
region = Rect2( 0, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 2 )
region = Rect2( 16, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 2 )
region = Rect2( 32, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=7]
atlas = ExtResource( 2 )
region = Rect2( 48, 0, 16, 16 )

[sub_resource type="SpriteFrames" id=8]
animations = [ {
"frames": [ SubResource( 4 ), SubResource( 5 ), SubResource( 6 ), SubResource( 7 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[node name="Enemy" type="Area2D" groups=["enemy"]]
script = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 4, 4 )
shape = SubResource( 1 )

[node name="AITimer" type="Timer" parent="."]

[node name="PhaseOut" type="Area2D" parent="."]

[node name="PhaseOutCollider" type="CollisionShape2D" parent="PhaseOut"]
position = Vector2( 4, 4 )
shape = SubResource( 2 )

[node name="PhaseIn" type="Area2D" parent="."]

[node name="PhaseInCollider" type="CollisionShape2D" parent="PhaseIn"]
position = Vector2( 4, 4 )
shape = SubResource( 3 )

[node name="Enemy" type="AnimatedSprite" parent="."]
position = Vector2( 4, 4 )
frames = SubResource( 8 )
playing = true

[connection signal="area_entered" from="." to="." method="_on_Enemy_area_entered"]
[connection signal="area_exited" from="." to="." method="_on_Enemy_area_exited"]
[connection signal="timeout" from="AITimer" to="." method="_on_AITimer_timeout"]
[connection signal="area_entered" from="PhaseOut" to="." method="_on_PhaseOut_area_entered"]
[connection signal="area_entered" from="PhaseIn" to="." method="_on_PhaseIn_area_entered"]
